sql.cmd, sql+oci.cmd: tweaks for SQLcl 22.4